--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title> WebRTC</title>
+    <title> Call Video</title>
     <script src="jquery.js"></script>
     <script src="peer.js"></script>
     <script src="peerjs.js"></script>
@@ -16,9 +16,9 @@
         <ul id="ulUser">
 
         </ul>
-        <video id="localStream" width="300" controls></video>
+        <video id="localStream" width="250" controls></video>
         <br /><br />
-        <video id="remoteStream" width="300" controls></video>
+        <video id="remoteStream" width="250" controls></video>
         <br /><br />
         <input type="text" id="remoteID" placeholder="Remote ID">
         <button id="btnCall">Call</button>
